# docAMR

./: LICENSE  README.md  amr_io.py  dev1_coref.fof  dev2_coref.fof  docAMR_from_gold.sh  docAMR_from_pairwise.sh  docAMR_from_unmerged.sh  doc_amr.py  pyproject.toml  requirements.txt  setup.py  test_coref.fof  train_coref.fof
docSmatch/: amr.py  smatch.py
doc_amr_baseline/: README.md  amr_constituents.py  baseline_io.py  get_allen_coref.py  make_doc_amr.py  requirements.txt  run_doc_amr_baseline.sh
doc_amr_baseline/example/: doc_sen.amr  docamr_docAMR.out
doc_amr_baseline/tests/: baseline_allennlp_test.sh
